# VapourSynth-TTempSmooth

./: Makefile.am  README.md  configure.ac  meson.build
TTempSmooth/: TTempSmooth.cpp  TTempSmooth.vcxproj  TTempSmooth.vcxproj.filters
